# scrp_solution

./: .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  pyproject.toml  settings.toml  template.yaml
.github/workflows/: ci.yml
core/: __init__.py  api.py  cache.py  config.py  db.py  invoker.py  models.py  utils.py
docs/: 0001_Social_Media_Scraper_Solution_Design.md
stt/: __init__.py  handler.py  models.py  server.py  service.py
tests/: conftest.py
tests/stt/: test_handler.py  test_service.py
