[project]
name = "scraper-solution"
version = "0.1.0"
description = "Content analysis system with AI-powered safety scoring"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "assemblyai>=0.35.0",
    "boto3>=1.34.0",
    "dynaconf>=3.2.0",
    "flask>=3.0.0",
    "httpx>=0.27.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "types-redis>=4.6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["tests"]

[[tool.mypy.overrides]]
module = ["assemblyai", "assemblyai.*", "boto3", "boto3.*", "dynaconf", "flask", "httpx", "redis", "redis.*", "sqlalchemy", "sqlalchemy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["core.api", "core.db", "core.cache", "core.models"]
strict = false
warn_return_any = false
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
